--- a/app.json
+++ b/app.json
@@ -21,8 +21,8 @@
       "required": true
     }
   },
-  "website": "https://github.com/用户名/仓库名",
-  "repository": "https://github.com/用户名/仓库名",
+  "website": "https://github.com/loveme888/999",
+  "repository": "https://github.com/loveme888/999",
   "stack": "container",
   "features": [
     "runtime-dyno-metadata"
